# YetAnotherUnityMcp

./: .gitignore  CLAUDE.md  CorrectMcpJson.md  LICENSE  MCP_MIGRATION_GUIDE.md  README.md  TECH_DETAILS.md  conftest.py  pyproject.toml  schema_debug.json
plugin/: MCP_CONTAINER_README.md  README.md  plugin.md
plugin/Scripts/: WebsocketLimitations.md  YetAnotherUnityMcp.asmdef
plugin/Scripts/Editor/: CommandExecutionMonitor.cs  MCPConnection.cs  MCPDebugWindow.cs  MCPMenu.cs  MCPTcpServer.cs  MCPWebSocketServer.cs  MCPWindow.cs  MCP_CONTAINER_README.md  YetAnotherUnityMcp.Editor.asmdef
plugin/Scripts/Editor/Commands/: EditorMcpContainer.cs  ExecuteCodeCommand.cs  GetLogsCommand.cs  GetSchemaCommand.cs  GetUnityInfoCommand.cs  MCPLocalCommandExecutor.cs  ModifyObjectCommand.cs  ObjectMcpContainer.cs  SceneMcpContainer.cs  TakeScreenshotCommand.cs  YaumSpecificMcpContainer.cs
plugin/Scripts/Editor/Models/: MCPAttributeUtil.cs  MCPAttributedModels.cs  MCPAttributes.cs  MCPInvokers.cs  MCPModels.cs  MCPRegistry.cs  MCPToolSchema.cs
plugin/Scripts/Editor/Net/: MCPTcpServer.cs  TcpMessages.cs  TcpServer.cs
plugin/Scripts/Editor/Ressources/: GetSchemaCommand.cs
server/: README.md  __init__.py  async_utils.py  connection_manager.py  dynamic_tool_invoker.py  dynamic_tools.py  fastmcp_example.py  low_level_tcp_client.py  main.py  mcp_client.py  mcp_resources.py  mcp_server.py  mcp_tools.py  resource_context.py  server.md  test_async_utils.py  test_dynamic_tools.py  unity_client_util.py  unity_socket_client.py  unity_tcp_client.py  unity_websocket_client.py  websocket_client.py  websocket_handler.py  websocket_utils.py
server/api/: __init__.py  handlers.py
server/mcp/: __init__.py  dynamic_tool_invoker.py  dynamic_tools.py  resources.py  tools.py  unity_client_util.py
server/mcp/resources/: __init__.py  logs.py  object.py  scene.py  unity_info.py  unity_logs.py  unity_object.py  unity_scene.py
server/mcp/tools/: __init__.py  execute_code.py  get_logs.py  get_schema.py  get_unity_info.py  modify_object.py  screen_shot.py  take_screenshot.py
server/models/: __init__.py  unity.py
tests/: __init__.py  conftest.py  run_all_tests.py  run_resource_tests.py  test_api.py  test_async_utils.py  test_client_patching.py  test_connect_tcp.py  test_connect_websocket.py  test_dynamic_resources.py  test_dynamic_tools.py  test_mcp_server.py  test_resource_context.py  test_resource_parameters.py  test_schema.py  test_uri_parameter_matching.py
(+14 files in other folders)
